<resources>
    <string name="app_name">Testovoe15</string>
    <string name="converter">CONVERTER</string>
    <string name="recommendations">recommendations</string>
    <string name="help">HELP</string>
    <string name="select_currency">SELECT CURRENCY</string>
    <string name="crypto_converter">CRYPTO CONVERTER</string>
    <string name="convert">Convert</string>
    <string name="ask_question">ASK QUESTION</string>
    <string name="question">Question</string>
    <string name="settings">SETTINGS</string>
    <string-array name="currencies">
        <item>BTC</item>
        <item>ETH</item>
        <item>XRP</item>
        <item>LTC</item>
        <item>BCH</item>
        <item>ADA</item>
    </string-array>
</resources>