<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageViewFon2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageCrypto"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:adjustViewBounds="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/crypto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonConverter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/converter"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonRecommendations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCrypto"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRecommendations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/recommendations"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConverter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/help"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRecommendations" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="settings"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHelp" />


</androidx.constraintlayout.widget.ConstraintLayout>