<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConverterActivity">

    <ImageView
        android:id="@+id/imageViewFon2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageCrypto"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/crypto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/crypto_converter"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCrypto" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edittext_pink"
        android:hint="Enter amount"
        android:inputType="numberDecimal"
        android:padding="20dp"
        android:textColorHint="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdvice" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount">

        <Spinner
            android:id="@+id/spinnerFromCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/SpinnerStyle"
            android:layout_weight="0.4"
            android:padding="20dp"
            android:prompt="@string/select_currency"
            android:entries="@array/currencies" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:src="@drawable/arrow"
            android:layout_weight="0.2"/>

        <Spinner
            android:id="@+id/spinnerToCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/SpinnerStyle"
            android:layout_weight="0.4"
            android:padding="20dp"
            android:prompt="@string/select_currency"
            android:entries="@array/currencies" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/convert"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay1" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="42sp"
        android:textStyle="italic|bold"
        android:textColor="?attr/colorSecondary"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConvert"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>